[tool.poetry]
name = "tclabhsharz"
version = "0.1.0"
description = ""
authors = ["Christian Murschall <christian@murschall.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tclab = "^0.4.9"
pandas = "^2.0.2"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
